// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 1`] = `
<div
  class="filterNavigatorBarScrollContainer"
>
  <div
    class="filterNavigatorBarScrollParent profileFilterNavigator"
    data-testid="FilterNavigatorBarScrollParent"
  >
    <div
      class="filterNavigatorBarScrollContent"
      data-testid="FilterNavigatorBarScrollContent"
      style="left: 0px;"
    >
      <ol
        class="filterNavigatorBar profileFilterNavigator"
      >
        <li
          class="filterNavigatorBarItem filterNavigatorBarRootItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
        >
          <button
            class="filterNavigatorBarItemContent"
            type="button"
          >
            <span
              class="filterNavigatorBarItemContent profileFilterNavigator--tab-selector button"
            >
              Full Range (⁨51ms⁩)
            </span>
          </button>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 2`] = `
<div
  class="filterNavigatorBarScrollContainer"
>
  <div
    class="filterNavigatorBarScrollParent profileFilterNavigator"
    data-testid="FilterNavigatorBarScrollParent"
  >
    <div
      class="filterNavigatorBarScrollContent"
      data-testid="FilterNavigatorBarScrollContent"
      style="left: 0px;"
    >
      <ol
        class="filterNavigatorBar profileFilterNavigator"
      >
        <li
          class="filterNavigatorBarItem filterNavigatorBarRootItem"
        >
          <button
            class="filterNavigatorBarItemContent"
            type="button"
          >
            <span
              class="filterNavigatorBarItemContent profileFilterNavigator--tab-selector"
            >
              Full Range (⁨51ms⁩)
            </span>
          </button>
        </li>
        <li
          class="filterNavigatorBarItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
        >
          <span
            class="filterNavigatorBarItemContent"
          >
            40ms
          </span>
        </li>
      </ol>
    </div>
  </div>
</div>
`;

exports[`app/ProfileFilterNavigator renders ProfileFilterNavigator properly 3`] = `
<div
  class="filterNavigatorBarScrollContainer"
>
  <div
    class="filterNavigatorBarScrollParent profileFilterNavigator"
    data-testid="FilterNavigatorBarScrollParent"
  >
    <div
      class="filterNavigatorBarScrollContent"
      data-testid="FilterNavigatorBarScrollContent"
      style="left: 0px;"
    >
      <ol
        class="filterNavigatorBar profileFilterNavigator"
      >
        <li
          class="filterNavigatorBarItem filterNavigatorBarRootItem"
        >
          <button
            class="filterNavigatorBarItemContent"
            type="button"
          >
            <span
              class="filterNavigatorBarItemContent profileFilterNavigator--tab-selector"
            >
              Full Range (⁨51ms⁩)
            </span>
          </button>
        </li>
        <li
          class="filterNavigatorBarItem filterNavigatorBarSelectedItem filterNavigatorBarLeafItem"
        >
          <button
            class="filterNavigatorBarItemContent"
            type="button"
          >
            40ms
          </button>
        </li>
        <li
          class="filterNavigatorBarItem filterNavigatorBarUncommittedItem filterNavigatorBarLeafItem"
          title="100μs"
        >
          <span
            class="filterNavigatorBarItemContent"
          >
            100μs
          </span>
        </li>
      </ol>
    </div>
  </div>
</div>
`;
